--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -602,14 +602,14 @@ workflows:
 
       - test_blst:
           name: test_blst_fil_proofs_param
-          crate: "filecoin-proofs-param"
+          crate: "fil-proofs-param"
           requires:
             - cargo_fetch
             - ensure_groth_parameters_and_keys_linux
 
       - test:
           name: test_fil_proofs_param
-          crate: "filecoin-fil-proofs-param"
+          crate: "fil-proofs-param"
           requires:
             - cargo_fetch
             - ensure_groth_parameters_and_keys_linux
