--- a/storage-proofs/post/Cargo.toml
+++ b/storage-proofs/post/Cargo.toml
@@ -34,6 +34,7 @@ tempfile = "3"
 pretty_assertions = "0.6.1"
 rand_xorshift = "0.2.0"
 filecoin-hashers = { path = "../../filecoin-hashers", version = "1.0.0", default-features = false, features = ["poseidon", "sha256", "blake2s"]}
+pretty_env_logger = "0.4.0"
 
 [features]
 default = ["pairing", "gpu"]
